@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.31 2003/02/03 23:48:07 jlam Exp $
+# $NetBSD: Makefile,v 1.32 2003/02/11 04:23:14 jlam Exp $
 #
 
 VERSION=	1.1.8
 PKGNAME=	jdk-${VERSION}
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	lang
 MASTER_SITES=	ftp://ftp.netbsd.org/pub/NetBSD/misc/java/i386/${VERSION}/ \
 		ftp://ftp.de.netbsd.org/pub/NetBSD/misc/java/i386/${VERSION}/
@@ -81,6 +81,7 @@ pre-install:
 			${LN} -s $$X.${VERSION} $$X;			\
 		fi ;							\
 	done)
+	${LN} -sf . ${WRKSRC}/jre
 .endif
 
 do-install:
