@@ -1,13 +1,14 @@
-# $NetBSD: Makefile,v 1.20 2003/02/09 16:02:11 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2003/02/11 04:23:15 jlam Exp $
 
 DISTNAME=	j2sdk-1_3_1_07-linux-i586
 PKGNAME=	sun-jdk13-1.0.7
+PKGREVISION=	1
 WRKSRC=		${WRKDIR}/jdk1.3.1_07
 MASTER_SITES=	# empty
 
 COMMENT=	Sun's Java(tm) Development Kit 1.3.1
 
-DEPENDS=	sun-jre13>=1.0.7:../../lang/sun-jre13
+DEPENDS=	sun-jre13>=1.0.7nb1:../../lang/sun-jre13
 
 # Remove parts that are in common with the JRE.
 #
@@ -20,6 +21,7 @@ post-extract:
 			${RM} -f $$i;					\
 		fi;							\
 	done
+	${LN} -sf . ${WRKSRC}/jre
 
 _FETCH_MESSAGE= \
 	${ECHO} "======================================================================"; \
